--- a/src/lib/i18n/locales/fa-IR/translation.json
+++ b/src/lib/i18n/locales/fa-IR/translation.json
@@ -20,11 +20,11 @@
 	"Add a tag": "اضافه کردن یک تگ",
 	"Add custom prompt": "اضافه کردن یک درخواست سفارشی",
 	"Add Docs": "اضافه کردن اسناد",
-	"Add Files": "اضافه کردن فایل‌ها",
+	"Add Files": "اضافه کردن فایل\u200cها",
 	"Add Memory": "اضافه کردن یادگیری",
 	"Add message": "اضافه کردن پیغام",
 	"Add Model": "اضافه کردن مدل",
-	"Add Tags": "اضافه کردن تگ‌ها",
+	"Add Tags": "اضافه کردن تگ\u200cها",
 	"Add User": "اضافه کردن کاربر",
 	"Adjusting these settings will apply changes universally to all users.": "با تنظیم این تنظیمات، تغییرات به طور کلی برای همه کاربران اعمال می شود.",
 	"admin": "مدیر",
@@ -73,14 +73,14 @@
 	"Capabilities": "Tính năng",
 	"Change Password": "تغییر رمز عبور",
 	"Chat": "گپ",
-	"Chat Bubble UI": "UI‌ی‌ گفتگو‌",
-	"Chat direction": "جهت‌گفتگو",
-	"Chat History": "تاریخچه‌ی گفتگو",
+	"Chat Bubble UI": "UI\u200cی\u200c گفتگو\u200c",
+	"Chat direction": "جهت\u200cگفتگو",
+	"Chat History": "تاریخچه\u200cی گفتگو",
 	"Chat History is off for this browser.": "سابقه گپ برای این مرورگر خاموش است.",
-	"Chats": "گپ‌ها",
+	"Chats": "گپ\u200cها",
 	"Check Again": "چک مجدد",
-	"Check for updates": "بررسی به‌روزرسانی",
-	"Checking for updates...": "در حال بررسی برای به‌روزرسانی..",
+	"Check for updates": "بررسی به\u200cروزرسانی",
+	"Checking for updates...": "در حال بررسی برای به\u200cروزرسانی..",
 	"Choose a model before saving...": "قبل از ذخیره یک مدل را انتخاب کنید...",
 	"Chunk Overlap": "همپوشانی تکه",
 	"Chunk Params": "پارامترهای تکه",
@@ -132,7 +132,7 @@
 	"Default (SentenceTransformers)": "پیشفرض (SentenceTransformers)",
 	"Default (Web API)": "پیشفرض (Web API)",
 	"Default Model": "Mẫu mặc định",
-	"Default model updated": "مدل پیشفرض به‌روزرسانی شد",
+	"Default model updated": "مدل پیشفرض به\u200cروزرسانی شد",
 	"Default Prompt Suggestions": "پیشنهادات پرامپت پیش فرض",
 	"Default User Role": "نقش کاربر پیش فرض",
 	"delete": "حذف",
@@ -150,7 +150,7 @@
 	"Disabled": "غیرفعال",
 	"Discover a model": "Khám phá một mô hình",
 	"Discover a prompt": "یک اعلان را کشف کنید",
-	"Discover, download, and explore custom prompts": "پرامپت‌های سفارشی را کشف، دانلود و کاوش کنید",
+	"Discover, download, and explore custom prompts": "پرامپت\u200cهای سفارشی را کشف، دانلود و کاوش کنید",
 	"Discover, download, and explore model presets": "پیش تنظیمات مدل را کشف، دانلود و کاوش کنید",
 	"Display the username instead of You in the Chat": "نمایش نام کاربری به جای «شما» در چت",
 	"Document": "سند",
@@ -164,7 +164,7 @@
 	"Download canceled": "دانلود لغو شد",
 	"Download Database": "دانلود پایگاه داده",
 	"Drop any files here to add to the conversation": "هر فایلی را اینجا رها کنید تا به مکالمه اضافه شود",
-	"e.g. '30s','10m'. Valid time units are 's', 'm', 'h'.": "به طور مثال '30s','10m'. واحد‌های زمانی معتبر 's', 'm', 'h' هستند.",
+	"e.g. '30s','10m'. Valid time units are 's', 'm', 'h'.": "به طور مثال '30s','10m'. واحد\u200cهای زمانی معتبر 's', 'm', 'h' هستند.",
 	"Edit": "ویرایش",
 	"Edit Doc": "ویرایش سند",
 	"Edit User": "ویرایش کاربر",
@@ -174,7 +174,7 @@
 	"Embedding model set to \"{{embedding_model}}\"": "مدل پیدائش را به \"{{embedding_model}}\" تنظیم کنید",
 	"Enable Chat History": "تاریخچه چت را فعال کنید",
 	"Enable Community Sharing": "Kích hoạt Chia sẻ cộng đồng",
-	"Enable New Sign Ups": "فعال کردن ثبت نام‌های جدید",
+	"Enable New Sign Ups": "فعال کردن ثبت نام\u200cهای جدید",
 	"Enable Web Search": "Kích hoạt Tìm kiếm Web",
 	"Enabled": "فعال",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "اطمینان حاصل کنید که فایل CSV شما شامل چهار ستون در این ترتیب است: نام، ایمیل، رمز عبور، نقش.",
@@ -204,11 +204,11 @@
 	"Enter Your Role": "نقش خود را وارد کنید",
 	"Error": "Lỗi",
 	"Experimental": "آزمایشی",
-	"Export All Chats (All Users)": "اکسپورت از همه گپ‌ها(همه کاربران)",
-	"Export Chats": "اکسپورت از گپ‌ها",
+	"Export All Chats (All Users)": "اکسپورت از همه گپ\u200cها(همه کاربران)",
+	"Export Chats": "اکسپورت از گپ\u200cها",
 	"Export Documents Mapping": "اکسپورت از نگاشت اسناد",
 	"Export Models": "Xuất mô hình",
-	"Export Prompts": "اکسپورت از پرامپت‌ها",
+	"Export Prompts": "اکسپورت از پرامپت\u200cها",
 	"Failed to create API Key.": "ایجاد کلید API با خطا مواجه شد.",
 	"Failed to read clipboard contents": "خواندن محتوای کلیپ بورد ناموفق بود",
 	"February": "فوری",
@@ -240,10 +240,10 @@
 	"Image Generation Engine": "موتور تولید تصویر",
 	"Image Settings": "تنظیمات تصویر",
 	"Images": "تصاویر",
-	"Import Chats": "ایمپورت گپ‌ها",
+	"Import Chats": "ایمپورت گپ\u200cها",
 	"Import Documents Mapping": "ایمپورت نگاشت اسناد",
 	"Import Models": "Nhập mô hình",
-	"Import Prompts": "ایمپورت پرامپت‌ها",
+	"Import Prompts": "ایمپورت پرامپت\u200cها",
 	"Include `--api` flag when running stable-diffusion-webui": "فلگ `--api` را هنکام اجرای stable-diffusion-webui استفاده کنید.",
 	"Info": "Thông tin",
 	"Input commands": "ورودی دستورات",
@@ -264,12 +264,12 @@
 	"Last Active": "آخرین فعال",
 	"Light": "روشن",
 	"Listening...": "در حال گوش دادن...",
-	"LLMs can make mistakes. Verify important information.": "مدل‌های زبانی بزرگ می‌توانند اشتباه کنند. اطلاعات مهم را راستی‌آزمایی کنید.",
+	"LLMs can make mistakes. Verify important information.": "مدل\u200cهای زبانی بزرگ می\u200cتوانند اشتباه کنند. اطلاعات مهم را راستی\u200cآزمایی کنید.",
 	"LTR": "LTR",
 	"Made by OpenWebUI Community": "ساخته شده توسط OpenWebUI Community",
 	"Make sure to enclose them with": "مطمئن شوید که آنها را با این محصور کنید:",
-	"Manage Models": "مدیریت مدل‌ها",
-	"Manage Ollama Models": "مدیریت مدل‌های اولاما",
+	"Manage Models": "مدیریت مدل\u200cها",
+	"Manage Ollama Models": "مدیریت مدل\u200cهای اولاما",
 	"Manage Pipelines": "Quản lý các đường truyền (pipelines)",
 	"March": "مارچ",
 	"Max Tokens (num_predict)": "Max Tokens (số lượng ký tự tối đa)",
@@ -296,14 +296,14 @@
 	"Model Whitelisting": "لیست سفید مدل",
 	"Model(s) Whitelisted": "مدل در لیست سفید ثبت شد",
 	"Modelfile Content": "محتویات فایل مدل",
-	"Models": "مدل‌ها",
+	"Models": "مدل\u200cها",
 	"More": "بیشتر",
 	"Name": "نام",
 	"Name Tag": "نام تگ",
 	"Name your model": "Tên mô hình của bạn là gì?",
 	"New Chat": "گپ جدید",
 	"New Password": "رمز عبور جدید",
-	"No results found": "نتیجه‌ای یافت نشد",
+	"No results found": "نتیجه\u200cای یافت نشد",
 	"No search query generated": "Không có truy vấn tìm kiếm được tạo ra",
 	"No source available": "منبعی در دسترس نیست",
 	"None": "Không có gì.",
@@ -353,7 +353,7 @@
 	"Prompt (e.g. Tell me a fun fact about the Roman Empire)": "پیشنهاد (برای مثال: به من بگوید چیزی که برای من یک کاربرد داره درباره ایران)",
 	"Prompt Content": "محتویات پرامپت",
 	"Prompt suggestions": "پیشنهادات پرامپت",
-	"Prompts": "پرامپت‌ها",
+	"Prompts": "پرامپت\u200cها",
 	"Pull \"{{searchValue}}\" from Ollama.com": "بازگرداندن \"{{searchValue}}\" از Ollama.com",
 	"Pull a model from Ollama.com": "دریافت یک مدل از Ollama.com",
 	"Query Params": "پارامترهای پرس و جو",
@@ -362,17 +362,17 @@
 	"Record voice": "ضبط صدا",
 	"Redirecting you to OpenWebUI Community": "در حال هدایت به OpenWebUI Community",
 	"Refused when it shouldn't have": "رد شده زمانی که باید نباشد",
-	"Regenerate": "ری‌سازی",
-	"Release Notes": "یادداشت‌های انتشار",
+	"Regenerate": "ری\u200cسازی",	
+	"Release Notes": "یادداشت\u200cهای انتشار",
 	"Remove": "حذف",
 	"Remove Model": "حذف مدل",
 	"Rename": "تغییر نام",
 	"Repeat Last N": "Repeat Last N",
 	"Request Mode": "حالت درخواست",
-	"Reranking Model": "مدل ری‌شناسی مجدد غیرفعال است",
-	"Reranking model disabled": "مدل ری‌شناسی مجدد غیرفعال است",
-	"Reranking model set to \"{{reranking_model}}\"": "مدل ری‌شناسی مجدد به \"{{reranking_model}}\" تنظیم شده است",
-	"Reset Vector Storage": "بازنشانی ذخیره سازی برداری",
+	"Reranking Model": "مدل ری\u200cشناسی مجدد غیرفعال است",
+	"Reranking model disabled": "مدل ری\u200cشناسی مجدد غیرفعال است",
+	"Reranking model set to \"{{reranking_model}}\"": "مدل ری\u200cشناسی مجدد به \"{{reranking_model}}\" تنظیم شده است",
+ 	"Reset Vector Storage": "بازنشانی ذخیره سازی برداری",
 	"Response AutoCopy to Clipboard": "کپی خودکار پاسخ به کلیپ بورد",
 	"Role": "نقش",
 	"Rosé Pine": "Rosé Pine",
@@ -380,8 +380,8 @@
 	"RTL": "RTL",
 	"Save": "ذخیره",
 	"Save & Create": "ذخیره و ایجاد",
-	"Save & Update": "ذخیره و به‌روزرسانی",
-	"Saving chat logs directly to your browser's storage is no longer supported. Please take a moment to download and delete your chat logs by clicking the button below. Don't worry, you can easily re-import your chat logs to the backend through": "ذخیره گزارش‌های چت مستقیماً در حافظه مرورگر شما دیگر پشتیبانی نمی‌شود. لطفاً با کلیک بر روی دکمه زیر، چند لحظه برای دانلود و حذف گزارش های چت خود وقت بگذارید. نگران نباشید، شما به راحتی می توانید گزارش های چت خود را از طریق بکند دوباره وارد کنید",
+	"Save & Update": "ذخیره و به\u200cروزرسانی",
+	"Saving chat logs directly to your browser's storage is no longer supported. Please take a moment to download and delete your chat logs by clicking the button below. Don't worry, you can easily re-import your chat logs to the backend through": "ذخیره گزارش\u200cهای چت مستقیماً در حافظه مرورگر شما دیگر پشتیبانی نمی\u200cشود. لطفاً با کلیک بر روی دکمه زیر، چند لحظه برای دانلود و حذف گزارش های چت خود وقت بگذارید. نگران نباشید، شما به راحتی می توانید گزارش های چت خود را از طریق بکند دوباره وارد کنید",
 	"Scan": "اسکن",
 	"Scan complete!": "اسکن کامل شد!",
 	"Scan for documents from {{path}}": "اسکن اسناد از {{path}}",
@@ -390,13 +390,13 @@
 	"Search Chats": "Tìm kiếm Trò chuyện",
 	"Search Documents": "جستجوی اسناد",
 	"Search Models": "Tìm kiếm mô hình",
-	"Search Prompts": "جستجوی پرامپت‌ها",
+	"Search Prompts": "جستجوی پرامپت\u200cها",
 	"Search Result Count": "Số kết quả tìm kiếm",
 	"Searched {{count}} sites_one": "Tìm kiếm {{count}} trang web_one",
 	"Searched {{count}} sites_other": "Tìm kiếm trên {{count}} trang web khác",
 	"Searching the web for '{{searchQuery}}'": "Tìm kiếm trên mạng web cho '{{searchQuery}}'",
 	"Searxng Query URL": "Tìm kiếm URL truy vấn",
-	"See readme.md for instructions": "برای مشاهده دستورالعمل‌ها به readme.md مراجعه کنید",
+	"See readme.md for instructions": "برای مشاهده دستورالعمل\u200cها به readme.md مراجعه کنید",
 	"See what's new": "ببینید موارد جدید چه بوده",
 	"Seed": "Seed",
 	"Select a base model": "Chọn một mẫu cơ sở",
@@ -419,19 +419,19 @@
 	"Set embedding model (e.g. {{model}})": "تنظیم مدل پیچشی (برای مثال {{model}})",
 	"Set Image Size": "تنظیم اندازه تصویر",
 	"Set Model": "تنظیم مدل",
-	"Set reranking model (e.g. {{model}})": "تنظیم مدل ری‌راینگ (برای مثال {{model}})",
-	"Set Steps": "تنظیم گام‌ها",
+	"Set reranking model (e.g. {{model}})": "تنظیم مدل ری\u200cراینگ (برای مثال {{model}})",
+	"Set Steps": "تنظیم گام\u200cها",
 	"Set Task Model": "Đặt Mô hình Công việc",
 	"Set Voice": "تنظیم صدا",
 	"Settings": "تنظیمات",
 	"Settings saved successfully!": "تنظیمات با موفقیت ذخیره شد!",
-	"Share": "اشتراک‌گذاری",
-	"Share Chat": "اشتراک‌گذاری چت",
+	"Share": "اشتراک\u200cگذاری",
+	"Share Chat": "اشتراک\u200cگذاری چت",
 	"Share to OpenWebUI Community": "اشتراک گذاری با OpenWebUI Community",
 	"short-summary": "خلاصه کوتاه",
 	"Show": "نمایش",
 	"Show shortcuts": "نمایش میانبرها",
-	"Showcased creativity": "ایده‌آفرینی",
+	"Showcased creativity": "ایده\u200cآفرینی",
 	"sidebar": "نوار کناری",
 	"Sign in": "ورود",
 	"Sign Out": "خروج",
@@ -450,7 +450,7 @@
 	"Suggested": "پیشنهادی",
 	"System": "سیستم",
 	"System Prompt": "پرامپت سیستم",
-	"Tags": "تگ‌ها",
+	"Tags": "تگ\u200cها",
 	"Tell us more:": "بیشتر بگویید:",
 	"Temperature": "دما",
 	"Template": "الگو",
@@ -461,7 +461,7 @@
 	"The score should be a value between 0.0 (0%) and 1.0 (100%).": "امتیاز باید یک مقدار بین 0.0 (0%) و 1.0 (100%) باشد.",
 	"Theme": "قالب",
 	"This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "این تضمین می کند که مکالمات ارزشمند شما به طور ایمن در پایگاه داده بکند ذخیره می شود. تشکر!",
-	"This setting does not sync across browsers or devices.": "این تنظیم در مرورگرها یا دستگاه‌ها همگام‌سازی نمی‌شود.",
+	"This setting does not sync across browsers or devices.": "این تنظیم در مرورگرها یا دستگاه\u200cها همگام\u200cسازی نمی\u200cشود.",
 	"Thorough explanation": "توضیح کامل",
 	"Tip: Update multiple variable slots consecutively by pressing the tab key in the chat input after each replacement.": "با فشردن کلید Tab در ورودی چت پس از هر بار تعویض، چندین متغیر را به صورت متوالی به روزرسانی کنید.",
 	"Title": "عنوان",
@@ -471,7 +471,7 @@
 	"Title Generation Prompt": "پرامپت تولید عنوان",
 	"to": "به",
 	"To access the available model names for downloading,": "برای دسترسی به نام مدل های موجود برای دانلود،",
-	"To access the GGUF models available for downloading,": "برای دسترسی به مدل‌های GGUF موجود برای دانلود،",
+	"To access the GGUF models available for downloading,": "برای دسترسی به مدل\u200cهای GGUF موجود برای دانلود،",
 	"to chat input.": "در ورودی گپ.",
 	"Today": "امروز",
 	"Toggle settings": "نمایش/عدم نمایش تنظیمات",
@@ -511,9 +511,9 @@
 	"Webhook URL": "URL وبهوک",
 	"WebUI Add-ons": "WebUI افزونه‌های",
 	"WebUI Settings": "تنظیمات WebUI",
-	"WebUI will make requests to": "WebUI درخواست‌ها را ارسال خواهد کرد به",
+	"WebUI will make requests to": "WebUI درخواست\u200cها را ارسال خواهد کرد به",
 	"What’s New in": "موارد جدید در",
-	"When history is turned off, new chats on this browser won't appear in your history on any of your devices.": "وقتی سابقه خاموش است، چت‌های جدید در این مرورگر در سابقه شما در هیچ یک از دستگاه‌هایتان ظاهر نمی‌شوند.",
+	"When history is turned off, new chats on this browser won't appear in your history on any of your devices.": "وقتی سابقه خاموش است، چت\u200cهای جدید در این مرورگر در سابقه شما در هیچ یک از دستگاه\u200cهایتان ظاهر نمی\u200cشوند.",
 	"Whisper (Local)": "ویسپر (محلی)",
 	"Workspace": "محیط کار",
 	"Write a prompt suggestion (e.g. Who are you?)": "یک پیشنهاد پرامپت بنویسید (مثلاً شما کی هستید؟)",
@@ -524,7 +524,7 @@
 	"You have no archived conversations.": "شما هیچ گفتگوی ذخیره شده ندارید.",
 	"You have shared this chat": "شما این گفتگو را به اشتراک گذاشته اید",
 	"You're a helpful assistant.": "تو یک دستیار سودمند هستی.",
-	"You're now logged in.": "شما اکنون وارد شده‌اید.",
+	"You're now logged in.": "شما اکنون وارد شده\u200cاید.",
 	"Youtube": "یوتیوب",
 	"Youtube Loader Settings": "تنظیمات لودر یوتیوب"
 }
