🔎 fix format again

--- a/src/lib/i18n/locales/fa-IR/translation.json
+++ b/src/lib/i18n/locales/fa-IR/translation.json
@@ -362,7 +362,7 @@
 	"Record voice": "ضبط صدا",
 	"Redirecting you to OpenWebUI Community": "در حال هدایت به OpenWebUI Community",
 	"Refused when it shouldn't have": "رد شده زمانی که باید نباشد",
-	"Regenerate": "ری\u200cسازی",	
+	"Regenerate": "ری\u200cسازی",
 	"Release Notes": "یادداشت\u200cهای انتشار",
 	"Remove": "حذف",
 	"Remove Model": "حذف مدل",
@@ -372,7 +372,7 @@
 	"Reranking Model": "مدل ری\u200cشناسی مجدد غیرفعال است",
 	"Reranking model disabled": "مدل ری\u200cشناسی مجدد غیرفعال است",
 	"Reranking model set to \"{{reranking_model}}\"": "مدل ری\u200cشناسی مجدد به \"{{reranking_model}}\" تنظیم شده است",
- 	"Reset Vector Storage": "بازنشانی ذخیره سازی برداری",
+	"Reset Vector Storage": "بازنشانی ذخیره سازی برداری",
 	"Response AutoCopy to Clipboard": "کپی خودکار پاسخ به کلیپ بورد",
 	"Role": "نقش",
 	"Rosé Pine": "Rosé Pine",
@@ -509,7 +509,7 @@
 	"Web Search": "Tìm kiếm trên Web",
 	"Web Search Engine": "Máy Tính Tìm Kiếm Trang Web",
 	"Webhook URL": "URL وبهوک",
-	"WebUI Add-ons": "WebUI افزونه‌های",
+	"WebUI Add-ons": "WebUI افزونه\u200cهای",
 	"WebUI Settings": "تنظیمات WebUI",
 	"WebUI will make requests to": "WebUI درخواست\u200cها را ارسال خواهد کرد به",
 	"What’s New in": "موارد جدید در",
