--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -124,6 +124,7 @@
 	"Dark": "Sombre",
 	"Database": "Base de données",
 	"December": "Décembre",
+	"Deepspeed status": "Mode Deepspeed",
 	"Default": "Par défaut",
 	"Default (Automatic1111)": "Par défaut (Automatic1111)",
 	"Default (SentenceTransformers)": "Par défaut (SentenceTransformers)",
@@ -398,7 +399,8 @@
 	"Send a Message": "Envoyer un message",
 	"Send message": "Envoyer un message",
 	"September": "Septembre",
-	"Server connection verified": "Connexion au serveur vérifiée",
+	"Server connection verified": "La connexion au serveur à bien été validée",
+	"Server connection failed": "La connexion au serveur à échouée",
 	"Set as default": "Définir par défaut",
 	"Set Default Model": "Définir le Modèle par Défaut",
 	"Set embedding model (e.g. {{model}})": "Définir le modèle d'embedding (p. ex. {{model}})",
@@ -478,6 +480,7 @@
 	"Use '#' in the prompt input to load and select your documents.": "Utilisez '#' dans l'entrée du prompt pour charger et sélectionner vos documents.",
 	"Use Gravatar": "Utiliser Gravatar",
 	"Use Initials": "Utiliser les Initiales",
+	"Use low vram mode": "Utiliser le mode faible vram",
 	"user": "utilisateur",
 	"User Permissions": "Permissions d'utilisateur",
 	"Users": "Utilisateurs",
