--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -124,6 +124,7 @@
 	"Dark": "",
 	"Database": "",
 	"December": "",
+	"Deepspeed status": "",
 	"Default": "",
 	"Default (Automatic1111)": "",
 	"Default (SentenceTransformers)": "",
@@ -398,6 +399,7 @@
 	"Send message": "",
 	"September": "",
 	"Server connection verified": "",
+	"Server connection failed": "",
 	"Set as default": "",
 	"Set Default Model": "",
 	"Set embedding model (e.g. {{model}})": "",
@@ -477,6 +479,7 @@
 	"Use '#' in the prompt input to load and select your documents.": "",
 	"Use Gravatar": "",
 	"Use Initials": "",
+	"Use low vram mode": "",
 	"user": "",
 	"User Permissions": "",
 	"Users": "",
