--- a/src/lib/i18n/locales/en-GB/translation.json
+++ b/src/lib/i18n/locales/en-GB/translation.json
@@ -172,6 +172,7 @@
 	"Embedding model set to \"{{embedding_model}}\"": "",
 	"Enable Chat History": "",
 	"Enable Community Sharing": "",
+	"Enable Narrator": "",
 	"Enable New Sign Ups": "",
 	"Enabled": "",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "",
@@ -480,6 +481,7 @@
 	"Use Gravatar": "",
 	"Use Initials": "",
 	"Use low vram mode": "",
+	"Use streaming mode": "",
 	"user": "",
 	"User Permissions": "",
 	"Users": "",
