--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -172,6 +172,7 @@
 	"Embedding model set to \"{{embedding_model}}\"": "Modèle d'embedding défini sur \"{{embedding_model}}\"",
 	"Enable Chat History": "Activer l'historique du chat",
 	"Enable Community Sharing": "",
+	"Enable Narrator": "Activer le narrateur",
 	"Enable New Sign Ups": "Activer les nouvelles inscriptions",
 	"Enabled": "Activé",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Vérifiez que le fichier CSV contienne 4 colonnes dans cet ordre : Name (Nom), Email, Password (Mot de passe), Role (Rôle).",
@@ -481,6 +482,7 @@
 	"Use Gravatar": "Utiliser Gravatar",
 	"Use Initials": "Utiliser les Initiales",
 	"Use low vram mode": "Utiliser le mode faible vram",
+	"Use streaming mode": "Utiliser le mode flux",
 	"user": "utilisateur",
 	"User Permissions": "Permissions d'utilisateur",
 	"Users": "Utilisateurs",
