feat(chat): add en_gb, en_us and de translation

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -53,6 +53,7 @@
 	"Archived Chats": "Archivierte Chats",
 	"are allowed - Activate this command by typing": "sind erlaubt - Aktiviere diesen Befehl, indem du",
 	"Are you sure?": "Bist du sicher?",
+	"At least one file in your conversation does not exist any more.": "Mindestens eine Datei in deiner Unterhaltung existiert nicht mehr.",
 	"Attach file": "Datei anhängen",
 	"Attention to detail": "Auge fürs Detail",
 	"Audio": "Audio",
@@ -466,6 +467,7 @@
 	"Text-to-Speech Engine": "Text-zu-Sprache-Engine",
 	"Tfs Z": "Tfs Z",
 	"Thanks for your feedback!": "Danke für dein Feedback",
+	"The following answer may be incomplete.": "Die folgende Antwort kann unvollständig sein.",
 	"The score should be a value between 0.0 (0%) and 1.0 (100%).": "Der Score sollte ein Wert zwischen 0,0 (0 %) und 1,0 (100 %) sein.",
 	"Theme": "Design",
 	"This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "Dadurch werden deine wertvollen Unterhaltungen sicher in der Backend-Datenbank gespeichert. Vielen Dank!",
