--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -53,6 +53,7 @@
 	"Archived Chats": "",
 	"are allowed - Activate this command by typing": "",
 	"Are you sure?": "",
+  	"At least one file in your conversation does not exist any more.": "",
 	"Attach file": "",
 	"Attention to detail": "",
 	"Audio": "",
@@ -466,6 +467,7 @@
 	"Text-to-Speech Engine": "",
 	"Tfs Z": "",
 	"Thanks for your feedback!": "",
+	"The following answer may be incomplete.": "",
 	"The score should be a value between 0.0 (0%) and 1.0 (100%).": "",
 	"Theme": "",
 	"This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "",
